--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col">
                   <br><br><br><br><br><br>
-                    <img src="C:\Users\HP\Downloads\The Energy Hub\The Energy Hub\img\trainer.jpg">
+                    <img src="img\trainer.jpg">
                 </div>
             </div>
         </div>
