--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function loadDoc() {
       document.getElementById("demo").innerHTML = this.responseText;
     }
   };
-  xhttp.open("GET", "about.html", true);
+  xhttp.open("GET", "services.html", true);
   xhttp.send();
 }
     </script>
